# claude-code-transcripts

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
docs/: DATA_EXPLORER.md  STAR_SCHEMA.md
src/ccutils/: __init__.py
src/ccutils/api/: __init__.py
src/ccutils/cli/: __init__.py  all.py  explore.py  import_cmd.py  json_cmd.py  local.py  utils.py  web.py
src/ccutils/export/: __init__.py  duckdb_archive.py  html.py
src/ccutils/parsers/: __init__.py  discovery.py  session.py
src/ccutils/schemas/: __init__.py
src/ccutils/schemas/simple/: __init__.py  etl.py
src/ccutils/schemas/star/: __init__.py  enrichment.py  etl.py  extractors.py  json_export.py  schema.py  semantic.py
src/ccutils/templates/: data_explorer.html  multi_session_index.html  star_schema_dashboard.html
src/claude_code_transcripts/: __init__.py
src/claude_code_transcripts/explorer/: index.html
src/claude_code_transcripts/explorer/css/: styles.css
src/claude_code_transcripts/explorer/js/: state.js  ui.js
src/claude_code_transcripts/export/: duckdb_archive.py  html.py
src/claude_code_transcripts/parsers/: __init__.py  session.py
src/claude_code_transcripts/schemas/simple/: schema.py
src/claude_code_transcripts/star_schema/: json_export.py
src/claude_code_transcripts/templates/: global_search.js  master_index.html  star_schema_dashboard.html
tests/: conftest.py  test_agent_discovery.py  test_all.py  test_duckdb_export.py  test_generate_html.py  test_json_export.py  test_search_index.py  test_star_schema.py  test_web_repo.py
(+8 files in other folders)
