[project]
name = "ccutils"
version = "0.7"
description = "Claude utilities for session transcripts, star schema analytics, data exploration, and probably more as it comes up as a use case in my day to day"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "fblissjr" }
]
maintainers = [
    { name = "fblissjr" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "duckdb",
    "httpx",
    "jinja2",
    "markdown",
    "questionary",
]

[project.urls]
Homepage = "https://github.com/fblissjr/ccutils"

[project.scripts]
ccutils = "ccutils:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-httpx>=0.35.0",
    "syrupy>=5.0.0",
]
